<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Class Scheduler</string>
    <string name="title_class_detail">Class Detail</string>
    <string name="title_activity_create_new_class">CreateNewClass</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="create_new_class">Add new class</string>
    <string name="title_select_time">Select Time</string>
    <string name="title_add_new_class">Add New Class</string>
    <string name="label_save">Save</string>
    <string name="toast_empty_title">Title must not be empty</string>
    <string name="title_day_detail">List O\' Classes</string>
    <string name="title_activity_create_new_class2">CreateNewClass2</string>
    <string name="delete_all">Delete All</string>
    <string name="add_new_item">Add new item</string>
    <string name="title_delete_all_classes">Delete All Classes</string>
    <string name="message_reaffirm_delete">Are you sure you want to delete all classes?</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_description">Description</string>
    <string name="hint_where">Where</string>
    <string name="text_to">To:</string>
    <string name="text_from">From:</string>
    <string name="text_day_of_week">Day of the week:</string>
    <string name="hint_title">Class Title</string>
    <string name="message_start_end_time">Please make sure the start time is before the end time</string>
    <string name="title_delete_class">Delete Class</string>
    <string name="message_delete_affirm">Do you want to delete this class?</string>

</resources>
