<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.ait.tiffanynguyen.classscheduler.CreateNewClass"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etClassTitle"
        android:hint="@string/hint_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/text_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerClassDay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/text_from"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>
        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/text_to"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>
        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etClassDesc"
        android:hint="@string/hint_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etClassLocation"
        android:hint="@string/hint_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<Button-->
    <!--android:id="@+id/btnSave"-->
    <!--android:text="Save"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

</LinearLayout>
